# GitAppend

./: .gitignore  Cargo.toml  README.md  current-config.json  example-config.json  flake.nix
.gitea/workflows/: build.yml
files/: file_one  file_three  file_two  multilines  nul_chars  plaintext_file_one  plaintext_file_two
src/: age.rs  appender.rs  config.rs  core.rs  file.rs  git.rs  main.rs
tests/: example-config.json  example-per-directory-history-config.json
