[package]
name = "git-append"
version = "0.1.0"
edition = "2021"
include = ["tests/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.115"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "4.2.0"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.18.2"
age = "0.10.0"
