[package]
name = "git-append"
version = "0.1.0"
edition = "2021"
include = ["tests/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde_json = "1.0.117"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.20.0"
age = "0.11.0"
env_logger = "0.11.3"
systemd-journal-logger = "2.1.1"
time = "0.3.36"
glob = "0.3.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
