[package]
name = "git-append"
version = "0.1.1"
edition = "2021"
include = ["tests/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.20.0"
age = "0.11.0"
time = "0.3.36"
glob = "0.3.2"
regex = "1.11.1"

[dev-dependencies]
pretty_assertions = "1.0.0"
